# bbmodel2bam

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml  stale.yml
bbmodel2bam/: cli.py  converter.py  loader.py
