[build-system]
requires = ["setuptools >= 61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panda3d-bbmodel2bam"
dynamic = ["version"]
authors = []
description = "Convert Blockbench .bbmodel files to Panda3D .bam files"
readme = "README.md"
keywords = ["panda3d", "blockbench", "gamedev"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["panda3d"]
requires-python = ">= 3.8"

[project.scripts]
bbmodel2bam = "bbmodel2bam.cli:main"

[project.entry-points."panda3d.loaders"]
bbmodel = "bbmodel2bam.loader:BbmodelLoader"

[tool.setuptools]
packages = ["bbmodel2bam"]

[tool.setuptools.dynamic]
version = {attr = "bbmodel2bam.version.__version__"}
